--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "vue-admin-permission",
+  "name": "crm-fe",
   "version": "0.1.0",
   "private": true,
-  "author": "Hui <543245444@qq.com>",
-  "scripts": {
+ "scripts": {
     "serve": "vue-cli-service serve",
     "serve:randy": "cross-env API_TYPE=randy vue-cli-service serve",
     "serve:peter": "cross-env API_TYPE=peter vue-cli-service serve",
